Sun Feb 20 10:46:00 CST 2000  Seth Burgess <sjburges@gimp.org>

	* app/gdisplay_ops.c: Fix bug that was causing images too
	big to really mess up when shrink wrapped.  Tried to make
	it work right for positioning image as well, but I fear 
	this may be WM dependant.  Please let me know if things 
	hang of the edges for you... (Fixes #6257)

	
Sun Feb 20 03:46:12 CET 2000  Sven Neumann <sven@gimp.org>

	* app/devices.c
	* app/gimpdnd.c
	* app/info_window.c
	* app/interface.c
	* app/tools.[ch]: do not ignore the mask of the tool icons

Sat Feb 19 20:34:43 CET 2000  Sven Neumann <sven@gimp.org>

	* plug-ins/common/pnm.c: Load files in the pbm ascii format even
	if they do not use whitespace in the bits section (which is 
	perfectly OK according to the pbm manpage). Fixes bug #6330.

Sat Feb 19 17:27:07 CET 2000  Sven Neumann <sven@gimp.org>

	* app/interface.c: Use geometry hints (minimum size and size
	increments) for the toolbox. This works quite nice here at my
	box, but your mileage may vary, so please test this and report
	back...

2000-02-19  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimppixmap.c: gimp_pixmap_new(): set the widget's
	requisition so it can be properly packed before it's realized.

	* libgimp/gimpwidgets.[ch]: added a "text" parameter to
	gimp_pixmap_button_new().

	* app/undo_history.c: use gimp_pixmap_buttons.
	
	* app/gradient.c
	* app/nav_window.c
	* app/palette.c
	* libgimp/gimppatheditor.c
	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/MapObject/mapobject_ui.c: changed calls to
	gimp_pixmap_button_new().

	* plug-ins/MapObject/mapobject_main.c: INIT_I18N() was missing in
	query().

	* plug-ins/pagecurl/pagecurl.c: use GimpVector2 functions instead
	of reinventing the wheel.

	* plug-ins/helpbrowser/helpbrowser.c: use gimp_pixmap_buttons.

	* plug-ins/helpbrowser/back.xpm
	* plug-ins/helpbrowser/forward.xpm: cropped.

Sat Feb 19 13:53:34 CET 2000  Sven Neumann <sven@gimp.org>
