@@ -1,3 +1,8 @@
+Sun Feb 20 18:40:34 CET 2000  Marc Lehmann <pcg@goof.com>
+
+        * app/fileops.c: Fix setting of filename on Save As (the filename
+        was not set on the first call, only on subsequent ones).
+
 Sun Feb 20 10:46:00 CST 2000  Seth Burgess <sjburges@gimp.org>
 
 	* app/gdisplay_ops.c: Fix bug that was causing images too
